--- a/app/src/main/res/layout/favorite_list_row.xml
+++ b/app/src/main/res/layout/favorite_list_row.xml
@@ -83,9 +83,10 @@
                 android:id="@+id/imageButton"
                 android:layout_width="23dp"
                 android:layout_height="32dp"
-                android:background="@android:color/transparent"
                 android:layout_marginEnd="8dp"
-                app:srcCompat="@drawable/baseline_favorite_24" />
+                android:background="@android:color/transparent"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/trash_icon" />
 
             <ImageButton
                 android:id="@+id/ringing_phone"
