--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,10 +5,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
 
+        <!-- Black line separator -->
         <View
             android:layout_width="match_parent"
             android:layout_height="4dp"
@@ -17,8 +18,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgUser"
@@ -38,7 +39,7 @@
         <ImageView
             android:id="@+id/imgPost"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="467dp"
             android:layout_marginTop="8dp"
             android:scaleType="centerInside"
             android:src="@drawable/red_shirt" />
@@ -46,8 +47,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/Location"
@@ -75,15 +76,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/likeButton"
                 android:layout_width="23dp"
                 android:layout_height="32dp"
-                android:background="@android:color/transparent"
                 android:layout_marginEnd="8dp"
+                android:background="@android:color/transparent"
                 app:srcCompat="@drawable/baseline_favorite_24" />
 
             <ImageButton
@@ -103,6 +104,12 @@
                 android:backgroundTint="#DF0707"
                 android:text="Sold!" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/edit_post_btn"
+            android:layout_width="106dp"
+            android:layout_height="wrap_content"
+            android:text="Edit" />
 
     </LinearLayout>
 </layout>
