--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,12 +7,10 @@
     android:background="#53F1AF"
     tools:context=".EditProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="160dp"
-        android:layout_height="185dp"
+        android:layout_width="134dp"
+        android:layout_height="147dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,25 +19,29 @@
         android:id="@+id/avatar"
         android:layout_width="202dp"
         android:layout_height="163dp"
+        android:layout_marginBottom="113dp"
         android:src="@drawable/avatar"
-        app:layout_constraintBottom_toTopOf="@id/imageButton"
+        app:layout_constraintBottom_toTopOf="@+id/Username_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="386dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="295dp"
         android:src="@drawable/ic_baseline_image_search_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="10dp" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/Username_et"
         android:layout_width="315dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="55dp"
         android:hint="Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +50,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/location_et"
         android:layout_width="315dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:hint="Location"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +61,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/password_et"
         android:layout_width="315dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:hint="Password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,14 +70,13 @@
 
     <Button
         android:id="@+id/registerBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
         android:backgroundTint="#F16953"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_et" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
