--- a/app/src/main/res/layout/fragment_sharing_post.xml
+++ b/app/src/main/res/layout/fragment_sharing_post.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/post"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6C79D"
@@ -11,7 +12,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="10dp"
         android:text="New Post"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -20,10 +21,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="227dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:id="@+id/postImage"
+        android:layout_width="388dp"
+        android:layout_height="253dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:scaleType="fitCenter"
         android:src="@drawable/red_shirt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,37 +38,37 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="14dp"
         android:src="@drawable/ic_baseline_photo_camera_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/postImage" />
 
     <ImageButton
         android:id="@+id/galleryBtn"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/baseline_photo_album_24"
-        app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/postImage" />
+
+    <Spinner
+        android:id="@+id/clothKind"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/color_spinner"
+        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />
 
     <Spinner
         android:id="@+id/color_spinner"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/kind_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />
-
-    <Spinner
-        android:id="@+id/kind_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/color_spinner"
+        app:layout_constraintEnd_toStartOf="@+id/clothKind"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />
@@ -77,7 +81,7 @@
         android:hint="Price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kind_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/color_spinner" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/description_et"
