--- a/app/src/main/res/layout/favorite_list_row.xml
+++ b/app/src/main/res/layout/favorite_list_row.xml
@@ -79,7 +79,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/garbageButton"
+                android:id="@+id/likeBtn"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
