--- a/app/src/main/res/layout/post_list_row.xml
+++ b/app/src/main/res/layout/post_list_row.xml
@@ -79,12 +79,12 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/garbageButton"
+                android:id="@+id/likeBtn"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginEnd="8dp"
                 android:background="@android:color/transparent"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/baseline_favorite_24" />
 
             <ImageButton
