--- a/app/src/main/res/layout/favorite_list_row.xml
+++ b/app/src/main/res/layout/favorite_list_row.xml
@@ -97,7 +97,7 @@
                 app:srcCompat="@drawable/ringing_phone" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/sold_textview"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
