--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -31,8 +31,8 @@
         android:id="@+id/search_btn"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
-        android:backgroundTint="#FF5722"
         android:src="@android:drawable/ic_menu_search"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintBottom_toTopOf="@+id/recyclerList"
         app:layout_constraintEnd_toEndOf="parent" />
 
