--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/location_et"
+        android:id="@+id/location_spinner"
         android:layout_width="315dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -57,7 +57,7 @@
         android:hint="Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_et" />
+        app:layout_constraintTop_toBottomOf="@+id/location_spinner" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/number_et"
