--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="635dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -38,9 +38,9 @@
         <ImageView
             android:id="@id/postImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="475dp"
             android:layout_marginTop="8dp"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="@drawable/red_shirt" />
 
         <LinearLayout
