--- a/app/src/main/res/layout/fragment_sharing_post.xml
+++ b/app/src/main/res/layout/fragment_sharing_post.xml
@@ -40,6 +40,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="14dp"
         android:src="@drawable/ic_baseline_photo_camera_24"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postImage" />
 
@@ -49,7 +50,8 @@
         android:layout_height="64dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/baseline_photo_album_24"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_baseline_image_search_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postImage" />
 
