--- a/app/src/main/res/layout/post_list_row.xml
+++ b/app/src/main/res/layout/post_list_row.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="578dp"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -38,9 +38,9 @@
         <ImageView
             android:id="@+id/imgPost"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="366dp"
             android:layout_marginTop="8dp"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="@drawable/red_shirt" />
 
         <LinearLayout
@@ -97,7 +97,7 @@
                 app:srcCompat="@drawable/ringing_phone" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/sold_textview"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
